fix: Split tag and parameters

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -6,4 +6,4 @@ COPY ./wwwroot /app
 RUN apk add --no-cache curl \
     && npm i http-server
 
-CMD ["npx", "http-server --port=3000"]
+CMD ["npx", "http-server", "--port=3000"]
