fix: Updates healthcheck

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "3011:3000"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3011/healthz"]
+      test: ["CMD", "curl", "-f", "http://localhost:3000"]
       interval: 30s
       timeout: 10s
       retries: 5
